--- a/css/style.css
+++ b/css/style.css
@@ -125,22 +125,6 @@ body {
     box-shadow: 4px 3px 10px #ff0000, -4px -3px 10px #ff0000;
 }
 
-
-/*	ANDROID SAMSUNG GALAXY S2		*/
-
-@media only screen and (min-device-width: 480px) and (max-device-width: 800px) and (orientation: landscape) {}
-
-@media only screen and (min-device-width: 480px) and (max-device-width: 800px) and (orientation: portrait) {
-    #youtube-icon {}
-    #search-input, #search-button {
-        height: 60px;
-        font-size: 2rem;
-    }
-    .videoList>li {
-        min-width: 50%;
-    }
-}
-
 .videoList>li>div {
     overflow: hidden;
     font-family: Roboto;
@@ -346,9 +330,12 @@ body {
 @media only screen and (min-device-width: 480px) and (max-device-width: 800px) and (orientation: landscape) {}
 
 @media only screen and (min-device-width: 480px) and (max-device-width: 800px) and (orientation: portrait) {
+    body {
+        font-size: 5px;
+    }
     #search-form {
         box-sizing: border-box;
-        padding: 20px;
+        padding: 5px;
         margin: 0;
         width: 100%;
     }
@@ -358,19 +345,24 @@ body {
     #search-input, #search-button {
         width: 100%;
         outline: none;
-        height: 70px;
         margin: 0;
-        font-size: 2rem;
+        font-size: 1.5rem;
+        height: 40px;
     }
     #search-button #search-icon {
-        width: 25px;
-        height: 25px;
+        width: 15px;
+        height: 15px;
     }
     .slide {
         width: 100vw;
         position: absolute;
     }
+    .videoList {
+        padding: 0;
+        margin: 0;
+    }
     .videoList>li {
+        font-size: 1rem;
         width: 70vw;
         height: 520px;
     }
