--- a/css/style.css
+++ b/css/style.css
@@ -1,365 +1,383 @@
 html {
-    height: 100%;
+		height: 100%;
 }
 
 body {
-    max-width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background: url('http://2.bp.blogspot.com/-axnVjHhK1EQ/Tx-MgcRb0qI/AAAAAAAADTY/V3A0Z6Whn8Q/s1600/free%2Bdigital%2Bscrapbook%2Bpaper_red%2Band%2Bwhite_stripes.jpg');
-    background-size: 100% 100%;
-    overflow: hidden;
+		max-width: 100%;
+		height: 100%;
+		margin: 0;
+		padding: 0;
+		background: url('http://2.bp.blogspot.com/-axnVjHhK1EQ/Tx-MgcRb0qI/AAAAAAAADTY/V3A0Z6Whn8Q/s1600/free%2Bdigital%2Bscrapbook%2Bpaper_red%2Band%2Bwhite_stripes.jpg');
+		background-size: 100% 100%;
+		overflow: hidden;
 }
 
 #container {
-    margin-bottom: -60px;
-    min-height: 100%;
-    overflow: hidden;
+		margin-bottom: -60px;
+		min-height: 100%;
+		overflow: hidden;
 }
 
 #header-site {
-    background: url('http://content.wallpapers-room.com/resolutions/1600x1000/B/Wallpapers-room_com___Black_Background_Set_Hole_2_by_iAmFreeman_1600x1000.jpg');
-    box-shadow: 0px 7px 10px #000000;
-    display: inline-block;
-    min-width: 100%;
+		background: url('http://content.wallpapers-room.com/resolutions/1600x1000/B/Wallpapers-room_com___Black_Background_Set_Hole_2_by_iAmFreeman_1600x1000.jpg');
+		box-shadow: 0px 7px 10px #000000;
+		display: inline-block;
+		min-width: 100%;
 }
 
 #search-form {
-    margin: 50px auto;
-    width: 600px;
-    display: flex;
-    flex-flow: row wrap;
-    align-content: center;
+		margin: 50px auto;
+		width: 600px;
+		display: flex;
+		flex-flow: row wrap;
+		align-content: center;
 }
 
 #search-form #youtube-icon {
-    flex: 1;
-    max-width: 20%;
-    padding-right: 10px;
-    cursor: pointer;
+		flex: 1;
+		max-width: 20%;
+		padding-right: 10px;
+		cursor: pointer;
 }
 
 #search-input {
-    flex: 5;
-    border: 1px solid #d8d8d8;
-    box-sizing: border-box;
-    padding: 0 10px;
-    font-size: 100%;
-    font-family: Roboto, arial, sans-serif;
+		flex: 5;
+		border: 1px solid #d8d8d8;
+		box-sizing: border-box;
+		padding: 0 10px;
+		font-size: 100%;
+		font-family: Roboto, arial, sans-serif;
 }
 
 #search-button {
-    flex: 1;
-    cursor: pointer;
-    padding: 5px;
-    background: #f8f8f8;
-    border: solid 1px transparent;
-    border-left: 0;
-    color: #333;
+		flex: 1;
+		cursor: pointer;
+		padding: 5px;
+		background: #f8f8f8;
+		border: solid 1px transparent;
+		border-left: 0;
+		color: #333;
 }
 
 #search-button:hover {
-    border-color: #c6c6c6;
-    background: #f0f0f0;
+		border-color: #c6c6c6;
+		background: #f0f0f0;
 }
 
 #search-button:hover #search-icon {
-    opacity: 1;
+		opacity: 1;
 }
 
 #search-button #search-icon {
-    background: url('../images/search.png') no-repeat;
-    background-size: 100% 100%;
-    display: block;
-    margin: auto;
-    opacity: .7;
-    width: 15px;
-    height: 15px;
+		background: url('../images/search.png') no-repeat;
+		background-size: 100% 100%;
+		display: block;
+		margin: auto;
+		opacity: .7;
+		width: 15px;
+		height: 15px;
 }
 
 #search-input, #search-button {
-    outline: none;
-    height: 35px;
-    margin: 0;
+		outline: none;
+		height: 35px;
+		margin: 0;
 }
 
 #results {
-    width: auto;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    transition: left .0s;
+		width: auto;
+		height: 100%;
+		position: absolute;
+		left: 0;
+		transition: left .0s;
 }
 
 .slide {
-    width: 100vw;
-    position: absolute;
+		width: 100vw;
+		position: absolute;
 }
 
 .videoList {
-    box-sizing: border-box;
-    padding: 20px;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    flex-flow: row wrap;
+		box-sizing: border-box;
+		padding: 20px;
+		list-style: none;
+		display: flex;
+		justify-content: space-around;
+		flex-flow: row wrap;
 }
 
 .videoList>li {
-    /*flex: 1;*/
-    width: 350px;
-    margin: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-    border-radius: 10px;
-    border: 2px solid #000000;
-    box-shadow: 4px 3px 7px #000000;
-    background: #f7fff7;
-    position: relative;
-    overflow: hidden;
+		/*flex: 1;*/
+		width: 350px;
+		margin: 10px;
+		padding: 10px;
+		box-sizing: border-box;
+		border-radius: 10px;
+		border: 2px solid #000000;
+		box-shadow: 4px 3px 7px #000000;
+		background: #f7fff7;
+		position: relative;
+		overflow: hidden;
 }
 
 .videoList>li:hover {
-    border: 2px solid #d0ffff;
-    box-shadow: 4px 3px 10px #ff0000, -4px -3px 10px #ff0000;
+		border: 2px solid #d0ffff;
+		box-shadow: 4px 3px 10px #ff0000, -4px -3px 10px #ff0000;
 }
 
 .videoList>li>div {
-    overflow: hidden;
-    font-family: Roboto;
+		overflow: hidden;
+		font-family: Roboto;
 }
 
 .videoList .title-video {
-    overflow: hidden;
-    flex: 1;
-    min-height: 13%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+		overflow: hidden;
+		flex: 1;
+		min-height: 13%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 }
 
 .title-video a {
-    text-decoration: none;
-    color: #000000;
-    cursor: pointer;
+		text-decoration: none;
+		color: #000000;
+		cursor: pointer;
 }
 
 .title-video a:hover {
-    text-decoration: underline;
-    color: #e52d27;
+		text-decoration: underline;
+		color: #e52d27;
 }
 
 .title-video h3 {
-    margin: 0;
+		margin: 0;
 }
 
 .videoList .image-video {
-    text-align: center;
-    width: 100%;
-    overflow: hidden;
-    position: relative;
+		text-align: center;
+		width: 100%;
+		overflow: hidden;
+		position: relative;
 }
 
 .image-video iframe {
-    display: none;
-    width: 100%;
-    height: 100%;
+		display: none;
+		width: 100%;
+		height: 100%;
 }
 
 .image-video:hover .play-video {
-    display: block;
+		display: block;
 }
 
 .image-video .play-video {
-    position: absolute;
-    display: none;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border: 2px solid #000000;
-    border-radius: 5px;
-    width: 20%;
-    height: 20%;
-    background: #ffffff;
-    color: #000000;
-    cursor: pointer;
+		position: absolute;
+		display: none;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		border: 2px solid #000000;
+		border-radius: 5px;
+		width: 20%;
+		height: 20%;
+		background: #ffffff;
+		color: #000000;
+		cursor: pointer;
 }
 
 .play-video i {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 }
 
 .play-video:hover {
-    background: #ff4c4c;
-    border-color: #000000;
-    color: #000000;
+		background: #ff4c4c;
+		border-color: #000000;
+		color: #000000;
 }
 
 .image-video img {
-    width: 100%;
-    transition: all .8s ease-in-out;
-    margin: 0;
+		width: 100%;
+		transition: all .8s ease-in-out;
+		margin: 0;
 }
 
 .image-video img:hover {
-    filter: blur(3px) opacity(.6) saturate(2);
-    transform: scale(1.3);
+		filter: blur(3px) opacity(.6) saturate(2);
+		transform: scale(1.3);
 }
 
 .videoList>li>div:nth-last-child(2) {
-    margin-bottom: 25%;
-    font-style: italic;
-    font-size: 1.1rem;
+		margin-bottom: 25%;
+		font-style: italic;
+		font-size: 1.1rem;
 }
 
 .item-div {
-    min-height: 12%;
-    max-height: 12%;
-    overflow: hidden;
-    font-size: 1.6rem;
+		min-height: 12%;
+		max-height: 12%;
+		overflow: hidden;
+		font-size: 1.6rem;
 }
 
 .icon-item {
-    display: inline-block;
-    font-size: 2rem !important;
-    vertical-align: middle;
+		display: inline-block;
+		font-size: 2rem !important;
+		vertical-align: middle;
 }
 
 .text-item {
-    display: inline-block;
-    margin-left: 5%;
-    width: 80%;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    vertical-align: middle;
+		display: inline-block;
+		margin-left: 5%;
+		width: 80%;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+		vertical-align: middle;
 }
 
 .views-info {
-    border-top: 2px solid #000000;
-    box-sizing: border-box;
-    padding: 2%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: #ff4c4c;
-    color: #ffffff;
+		border-top: 2px solid #000000;
+		box-sizing: border-box;
+		padding: 2%;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		background: #ff4c4c;
+		color: #ffffff;
 }
 
 .views-info ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    flex-flow: row;
-    justify-content: space-around;
-    font-weight: bold;
+		display: flex;
+		list-style: none;
+		padding: 0;
+		flex-flow: row;
+		justify-content: space-around;
+		font-weight: bold;
 }
 
 .views-info ul li {
-    flex: 1;
-    text-align: center;
-    min-height: 20%;
+		flex: 1;
+		text-align: center;
+		min-height: 20%;
 }
 
 .views-info ul li i {
-    font-size: 2rem;
-    cursor: pointer;
+		font-size: 2rem;
+		cursor: pointer;
 }
 
 .views-info ul li i:hover {
-    color: #d0b0b0;
+		color: #d0b0b0;
 }
 
 .views-info ul li p {
-    margin-bottom: 0;
+		margin-bottom: 0;
 }
 
 .footer {
-    width: 500px;
-    margin: auto;
-    height: 60px;
+		width: 500px;
+		margin: 0 auto;
+		height: 60px;
+		display: block;
 }
 
 .pagination {
-    padding: 0;
-    width: 100%;
-    margin: auto;
-    list-style: none;
+		padding: 0;
+		width: 100%;
+		margin: auto;
+		list-style: none;
 }
 
 .pagination li {
-    width: 50px;
-    height: 50px;
-    margin: 0 20px;
-    border-radius: 5px;
-    border: 1px solid #232426;
-    box-shadow: 1px 3px 6px #000000;
-    text-align: center;
-    background: #f7fff7;
-    color: #ff4c4c;
-    font-size: 1.4rem;
-    font-style: italic;
-    cursor: pointer;
-    display: inline-block;
+		width: 50px;
+		height: 50px;
+		margin: 0 20px;
+		border-radius: 5px;
+		border: 1px solid #232426;
+		box-shadow: 1px 3px 6px #000000;
+		text-align: center;
+		background: #f7fff7;
+		color: #ff4c4c;
+		font-size: 1.4rem;
+		font-style: italic;
+		cursor: pointer;
+		display: inline-block;
 }
 
 .pagination li .page {
-    display: block;
-    width: 100%;
-    text-align: center;
-    line-height: 50px;
+		display: block;
+		width: 100%;
+		text-align: center;
+		line-height: 50px;
 }
 
 .pagination li:hover {
-    background: #d0b0b0;
+		background: #d0b0b0;
 }
 
 .active {
-    background: #ff4c4c !important;
-    color: #ffffff !important;
+		background: #ff4c4c !important;
+		color: #ffffff !important;
 }
 
 
-/*	ANDROID SAMSUNG GALAXY S2		*/
+/*	NEXUS 5X		*/
 
-@media only screen and (min-device-width: 480px) and (max-device-width: 800px) and (orientation: portrait) {
-    body {
-        font-size: 5px;
-    }
-    #search-form {
-        box-sizing: border-box;
-        padding: 5px;
-        margin: 0;
-        width: 100%;
-    }
-    #youtube-icon {
-        display: none;
-    }
-    #search-input, #search-button {
-        width: 100%;
-        outline: none;
-        margin: 0;
-        font-size: 1.5rem;
-        height: 40px;
-    }
-    #search-button #search-icon {
-        width: 15px;
-        height: 15px;
-    }
-    .slide {
-        width: 100vw;
-        position: absolute;
-    }
-    .videoList {
-        margin: 0;
-    }
-    .videoList>li {
-        font-size: 1rem;
-        width: 70vw;
-    }
+@media only screen and (min-device-width: 412px) and (max-device-width: 732px) and (orientation: portrait) {
+		body {
+				font-size: 5px;
+				min-width: 412px;
+				max-width: 732px;
+		}
+		#search-form {
+				box-sizing: border-box;
+				padding: 5px;
+				margin: 0;
+				width: 100%;
+		}
+		#youtube-icon {
+				display: none;
+		}
+		#search-input, #search-button {
+				width: 100%;
+				outline: none;
+				margin: 0;
+				font-size: 1.5rem;
+				height: 40px;
+		}
+		#search-button #search-icon {
+				width: 15px;
+				height: 15px;
+		}
+		.slide {
+				width: 100vw;
+				position: absolute;
+		}
+		.videoList {
+				padding: 0;
+				margin: 0;
+		}
+		.videoList>li {
+				font-size: 1rem;
+				width: 70vw;
+				height: 500px;
+		}
+		.pagination li {
+				width: 35px;
+				height: 35px;
+				margin: 0 10px;
+		}
+		.footer {
+				width: 300px;
+				margin: 0 auto;
+				display: block;
+		}
+		.pagination li .page {
+				line-height: 35px;
+		}
 }
