--- a/css/style.css
+++ b/css/style.css
@@ -328,11 +328,13 @@ body {
 
 /*	NEXUS 5X		*/
 
-@media only screen and (min-device-width: 412px) and (max-device-width: 732px) and (orientation: portrait) {
+@media only screen and (min-device-width: 340px) and (max-device-width: 732px) and (orientation: portrait) {
 		body {
 				font-size: 5px;
-				min-width: 412px;
+				min-width: 340px;
 				max-width: 732px;
+				min-height: 340px;
+				max-height: 732px;
 		}
 		#search-form {
 				box-sizing: border-box;
@@ -341,6 +343,9 @@ body {
 				width: 100%;
 		}
 		#youtube-icon {
+				display: none;
+		}
+		#search-input:focus #youtube-icon {
 				display: none;
 		}
 		#search-input, #search-button {
@@ -363,9 +368,14 @@ body {
 				margin: 0;
 		}
 		.videoList>li {
-				font-size: 1rem;
 				width: 70vw;
-				height: 500px;
+				height: 480px;
+		}
+		.videoList>li>div {
+				font-size: 1rem;
+		}
+		.views-info {
+				font-size: .8rem !important;
 		}
 		.pagination li {
 				width: 35px;
